--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - 
         name: Build and push tagged container image for amd64
-        id: build-tag-amd64
         uses: docker/build-push-action@v2
         with:
           build-args: |
@@ -57,10 +56,9 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/kubectl:${{ steps.rancher-kubectl.outputs.tag }}
+            ghcr.io/${{ github.repository_owner }}/kubectl:${{ steps.rancher-kubectl.outputs.tag }}-amd64
       -
         name: Build and push tagged container image for arm64
-        id: build-tag-arm64
         uses: docker/build-push-action@v2
         with:
           build-args: |
@@ -70,13 +68,24 @@ jobs:
           platforms: linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/kubectl:${{ steps.rancher-kubectl.outputs.tag }}
-      - 
+            ghcr.io/${{ github.repository_owner }}/kubectl:${{ steps.rancher-kubectl.outputs.tag }}-arm64
+      -
+        name: Create final multiarch tag
+        id: build-final-tag
+        run: |
+          docker manifest create \
+            ghcr.io/${{ github.repository_owner }}/kubectl:${{ steps.rancher-kubectl.outputs.tag }} \
+            --amend ghcr.io/${{ github.repository_owner }}/kubectl:${{ steps.rancher-kubectl.outputs.tag }}-amd64 \
+            --amend ghcr.io/${{ github.repository_owner }}/kubectl:${{ steps.rancher-kubectl.outputs.tag }}-arm64
+
+          DIGEST=$(docker manifest push ghcr.io/${{ github.repository_owner }}/kubectl:${{ steps.rancher-kubectl.outputs.tag }})
+          echo "digest=$DIGEST" >> $GITHUB_ENV
+      -
         uses: sigstore/cosign-installer@main
       -
         name: Sign the images for releases
         run: |
           cosign sign \
-            ghcr.io/${{ github.repository_owner }}/kubectl@${{ steps.build-tag-amd64.outputs.digest }}
+            ghcr.io/${{ github.repository_owner }}/kubectl@${{ env.digest }}
         env:
           COSIGN_EXPERIMENTAL: 1
