--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
               echo "image-exists=true" >> $GITHUB_ENV
           fi
       -
-        uses: sigstore/cosign-installer@main
+        uses: sigstore/cosign-installer@v2.8.1
         if: env.image-exists != 'true'
       -
         name: Checkout code
