Updates cosign to v2.
Updates the CI scripts updating the cosign-installer to v3. Thus, the
cosign version now is v2. Which has breaking changes requiring some
changes on how the command is called and removing the need of using
environment variable to enable keyless signature.

Signed-off-by: José Guilherme Vanz <jguilhermevanz@suse.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build-and-sign:
+    name: "Build and sign kubectl"
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -31,7 +32,7 @@ jobs:
               echo "image-exists=true" >> $GITHUB_ENV
           fi
       -
-        uses: sigstore/cosign-installer@v2.8.1
+        uses: sigstore/cosign-installer@v3
         if: env.image-exists != 'true'
       -
         name: Checkout code
@@ -74,7 +75,5 @@ jobs:
         name: Sign the image
         if: env.image-exists != 'true'
         run: |
-          cosign sign \
+          cosign sign --yes \
             ghcr.io/${{ github.repository_owner }}/kubectl@${{ steps.build-image.outputs.digest }}
-        env:
-          COSIGN_EXPERIMENTAL: 1
