--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build and sign
 on:
   schedule:
-    - cron: '0 14 * * *'
+    - cron: "0 14 * * *"
   workflow_dispatch:
 
 jobs:
@@ -12,15 +12,12 @@ jobs:
       packages: write
       id-token: write
     steps:
-      -
-        name: Find latest kubectl version
+      - name: Find latest kubectl version
         run: |
           KUBECTL_VER="$(curl https://storage.googleapis.com/kubernetes-release/release/stable-1.27.txt)"
           echo "kubectl_ver=${KUBECTL_VER}" >> $GITHUB_ENV
-      -
-        run: echo "kubectl binary is at version ${{ env.kubectl_ver }}"
-      -
-        name: Stop if ${{ github.repository_owner }}/kubectl:${{ env.kubectl_ver }} in repo already
+      - run: echo "kubectl binary is at version ${{ env.kubectl_ver }}"
+      - name: Stop if ${{ github.repository_owner }}/kubectl:${{ env.kubectl_ver }} in repo already
         id: check-in-repo
         run: |
           # fake no-op token, image is public
@@ -31,48 +28,40 @@ jobs:
               echo "${{ github.repository_owner }}/kubectl:${{ env.kubectl_ver }} is in repo already"
               echo "image-exists=true" >> $GITHUB_ENV
           fi
-      -
-        uses: sigstore/cosign-installer@v3
+      - uses: sigstore/cosign-installer@11086d25041f77fe8fe7b9ea4e48e3b9192b8f19 # v3.1.2
         if: env.image-exists != 'true'
-      -
-        name: Checkout code
+      - name: Checkout code
         if: env.image-exists != 'true'
-        uses: actions/checkout@v3
-      -
-        name: Download and verify kubectl
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - name: Download and verify kubectl
         if: env.image-exists != 'true'
         run: ./download-kubectl.sh ${{ env.kubectl_ver }}
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         if: env.image-exists != 'true'
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@68827325e0b33c7199eb31dd4e31fbe9023e06e3 # v3.0.0
         with:
-          platforms: 'arm64'
-      -
-        name: Set up Docker Buildx
+          platforms: "arm64"
+      - name: Set up Docker Buildx
         if: env.image-exists != 'true'
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to GitHub Container Registry
+        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+      - name: Login to GitHub Container Registry
         if: env.image-exists != 'true'
-        uses: docker/login-action@v2
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Build and push tagged container image
+      - name: Build and push tagged container image
         id: build-image
         if: env.image-exists != 'true'
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
           platforms: linux/amd64, linux/arm64
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/kubectl:${{ env.kubectl_ver }}
-      -
-        name: Sign the image
+      - name: Sign the image
         if: env.image-exists != 'true'
         run: |
           cosign sign --yes \
