--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,12 @@
-name: Build and sign
+name: Build, sign and release
 on:
   schedule:
     - cron: "0 14 * * *"
   workflow_dispatch:
 
 jobs:
-  build-and-sign:
-    name: "Build and sign kubectl"
+  release:
+    name: "Build, sign and release kubectl"
     runs-on: ubuntu-latest
     permissions:
       packages: write
